# NoCode

./: .gitignore  AGENTS.md  Agent.md  README.md  SKILLS_USAGE.md  claude.md  codeagent  nocode  package-lock.json  package.json  pyproject.toml  run.sh  start.bat  start.ps1  start.sh  tasks  test_skills_system.py  test_write.txt
.claude/: settings.local.json
.skills/: browser_skill.py  memory_skill.py  system_skill.py  time_skill.py
cli/: __init__.py
config/: default.yaml
docs/design/: context-compression.md  skill-system.md
frontend/: tui.ts
multiagent_system/: README.md  __init__.py  config.py  config.yaml  server.py  session_mcp_server.py
multiagent_system/static/: app.js  index.html  styles.css
nocode_agent/: README.md  acp_server.py  agent.py  backend_stdio.py  cli.py  compression.py  config.example.yaml  config.py  config.yaml  interactive.py  log.py  main.py  persistence.py  prompts.py  skill_tool_registry.py  skills.py  subagents.py  tools.py
nocode_agent/compression/: __init__.py  auto_compact.py  config.py  lifecycle.py  microcompact.py
nocode_agent/frontend/: input_protocol.ts  tui.ts
nocode_agent/skills/: discover.py  expander.py  tool.py
openspec/: AGENTS.md  project.md
prompts/: context_memory.j2  system.j2  tool_descriptions.j2
skills/: README.md
skills/example-skill/: SKILL.md  implementation.py  references.md
skills/langchain-agent-patterns/: SKILL.md  implementation.py  references.md
skills/langchain-project-setup/: SKILL.md  implementation.py  references.md
skills/langsmith-trace-analyzer/: SKILL.md  implementation.py  references.md
skills/test-skill/: README.md  SKILL.md  implementation.py
src/: acp_server.py  agent.py  backend_stdio.py  cli.py  compression.py  idiom_cli.py  idiom_data.py  idiom_game.py  main.py  prompts.py  skill_tools.py  skills.py  tools.py  types.py
src/agent/: llm_client.py  loop.py
src/core/: __init__.py  agent.py  context.py  prompt_manager.py  types.py
src/tools/: base.py  (+3 more)
tests/: test_agent_model.py  test_config.py  test_interactive.py  test_persistence.py
web/: README.md  server.py
(+48 files in other folders)
