[project]
name = "nocode"
version = "0.2.0"
description = "NoCode AI agent companion"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
nocode = "src.main:main"

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
